--- a/src/main/resources/view/startPage.fxml
+++ b/src/main/resources/view/startPage.fxml
@@ -11,11 +11,16 @@
           <Menu mnemonicParsing="false" text="Menu">
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#handle" text="Logout" />
+                  <MenuItem mnemonicParsing="false" onAction="#handle" text="Reserve sights" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="loadbutton" layoutX="14.0" layoutY="41.0" mnemonicParsing="false" onAction="#load" text="LoadTrips" />
-      <TableView fx:id="tableTrips" layoutX="4.0" layoutY="83.0" prefHeight="303.0" prefWidth="593.0" />
+      <Button fx:id="loadbutton" layoutX="466.0" layoutY="42.0" mnemonicParsing="false" onAction="#load" text="LoadTrips" />
+      <TableView fx:id="tableTrips" layoutX="4.0" layoutY="97.0" prefHeight="303.0" prefWidth="593.0" />
+      <ChoiceBox fx:id="sightBox" layoutX="14.0" layoutY="57.0" prefWidth="150.0" />
+      <Label layoutX="14.0" layoutY="31.0" text="Search after Sights" />
+      <DatePicker layoutX="191.0" layoutY="57.0" />
+      <Label layoutX="191.0" layoutY="31.0" text="Search after date" />
    </children>
 </AnchorPane>
